feat(transaction-template): add endpoint to list related transactions
